src/test/fail/return_wrong_type_fail.egern
func square(arg: int): boolean {
    return arg * arg
}

print(square(4))
